[tool.poetry]
name = "doc-analysis-backend"
version = "0.1.0"
description = "Documentation analysis system backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">3.14.1,<4.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
neo4j = "^5.16.0"
networkx = "^3.2.1"
pydantic = "^2.5.3"
pyvis = "^0.3.2"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-experimental = "^0.3.0"
langchain-ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
